WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106048
PseudoElement should never dispatch events
https://bugs.webkit.org/show_bug.cgi?id=106048
Summary
PseudoElement should never dispatch events
Elliott Sprehn
Reported
2013-01-03 15:04:31 PST
PseudoElement should never dispatch events
Attachments
Patch
(4.50 KB, patch)
2013-01-03 15:11 PST
,
Elliott Sprehn
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.56 KB, patch)
2013-01-04 10:22 PST
,
Elliott Sprehn
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Elliott Sprehn
Comment 1
2013-01-03 15:11:44 PST
Created
attachment 181229
[details]
Patch
Build Bot
Comment 2
2013-01-03 15:34:28 PST
Comment on
attachment 181229
[details]
Patch
Attachment 181229
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/15671049
Elliott Sprehn
Comment 3
2013-01-04 10:22:22 PST
Created
attachment 181325
[details]
Patch for landing
Elliott Sprehn
Comment 4
2013-01-04 10:24:44 PST
(In reply to
comment #3
)
> Created an attachment (id=181325) [details] > Patch for landing
Going to wait for the EWS to go green.
WebKit Review Bot
Comment 5
2013-01-04 12:31:25 PST
Comment on
attachment 181325
[details]
Patch for landing Clearing flags on attachment: 181325 Committed
r138832
: <
http://trac.webkit.org/changeset/138832
>
WebKit Review Bot
Comment 6
2013-01-04 12:31:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug